# hpcToolsFramework

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
hpc_tools_framework/: __init__.py
hpc_tools_framework/configs/: advisor.yml  darshan.yml  example.yml  extrae.yml  gprof.yml  hpctoolkit.yml  likwid.yml  perf.yml  scorep.yml  tau.yml  valgrind.yml  vtune.yml
hpc_tools_framework/constants/: __init__.py  database.py  directories.py  python_local.py  repositories.py  variables.py  watcher.py
hpc_tools_framework/core/: __init__.py  auth.py  config_loader.py  core.py  environment.py  input_file_manager.py  output_downloader.py  pipeline.py  python_initializer.py  slurm.py  system_info.py
hpc_tools_framework/io/: __init__.py  dir_ops.py  file_ops.py  jobscripts_ops.py  makefile_ops.py  new_shell.py  program_ops.py  server.py  ssh.py
hpc_tools_framework/job_builder/: __init__.py  jobscript_builder.py  jobscript_creator.py  jobscript_generator.py
hpc_tools_framework/makefile_builder/: __init__.py  cleanup.py  makefile_creator.py  makefile_modifier.py
hpc_tools_framework/models/: __init__.py  analysis.py  cluster_info.py  compiler_level.py  configuration.py  jobscript.py  program.py  slurm_job_status.py  tool.py
hpc_tools_framework/output_parser/: __init__.py  jobscript_output_parser.py  latex.header  parser.py  parser_format.py
hpc_tools_framework/scheduler/: __init__.py  database_exception.py  database_queries.py  scheduler_initializer.py
hpc_tools_framework/spack_wrapper/: __init__.py  spack_initializer.py  spack_not_installed_exception.py  (+2 more)
(+29 files in other folders)
