[metadata]
name = hpc_tools_framework
version = 0.1.0
author = Maximilian Keiff, Frederic Voigt
author_email = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wr-hamburg/hpcToolsFramework-client
project_urls =
    Docs = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = hpc_tools_framework
packages = find:
python_requires = >=3.7
install_requires =
    flask
    fpdf
    os
    parallel-ssh
    pyyaml
    re
    zmq

[options.packages.find]
where = hpc_tools_framework

[pydocstyle]
convention = numpy